# java2scala

./: .gitignore  README.md  Setup.hs  java2scala.cabal  profile.txt  test.prof  uuagc_options
doc/ast_s/: ast_fielddeclaration.txt  ast_fielddeclaration2.txt  ast_fielddeclaration3.txt  ast_fielddeclaration4.txt  ast_for.txt  ast_for_clasic.txt  ast_for_collection_specialcases.txt  ast_ifwhile5.txt  ast_static1.txt  ast_switch.txt
profiles/: 1_java2scala_package.prof  2_java2scala_imports.prof  3_java2scala_fstmethod.prof  4_java2scala.prof
src/: Main.hs
src/AG/: ImportDeclarationSem.ag  J2SAttrSem.ag  Sintax.ag  Syntax.ag
src/J2s/: Chain.hs  Integration.hs  Parser.hs  Scanner.hs
src/J2s/Ag/: Sintax.ag
src/J2s/Ast/: Semantic.hs  Sintax.hs  Syntax.hs
src/J2s/Integration/: ScannerParser.hs
src/J2s/Scanner/: Generic.hs  Lexical.hs  Position.hs  Show.hs  Token.hs
test/: Content.hs  Example.java  Example.scala  Generics.java  Main.hs
test/J2s/Parser/: 1compilationUnitSimple.scala  Test.hs  TmpImport.java  TmpImport.scala
test/J2s/Parser/java/: PruebaDaoGeneric.java
test/J2s/Scanner/: Test.hs
test/J2s/java/openjdk-6-src-b27/jdk/test/javax/xml/crypto/dsig/: GenerationTests.java
test/J2s/java/summary/: AbstractMethodError.scala  AbstractSequentialList.scala  GridLayout.java  ObjectHandler.java  Panel.java
test/J2s/priority/: Clases.java  Classes2.java  DoWhile.java  DoWhile.scala  Ejemplo.java  FieldDeclarations.java  ForClasico.java  ForSpecialCase1.java  ForSpecialCase2.java  ForSpecialCase2.scala  ForTem.java  ForTemp.scala  ForTransformacionGeneral.java  IfElse.java  Interfaces.java  Interfaces.scala  Interfaces1.java  Package.java  Static1.java  Static2.java  Static3.java  StaticBicycle.java  StaticDeclaration.java  StaticNestedClass.java  Switch.java  While.java  While.scala
