name:              java2scala
version:           1.0
synopsis:          Convert java to scala.
license:           MIT
license-file:      LICENSE
build-Type:        Custom
cabal-version:     >= 1.8
author:            Andrea Moruno
maintainer:        tatiana.moruno@gmail.com
extra-source-files: uuagc_options

flag bootstrap_external
   description: Use an external uuagc executable for bootstrapping
   default: True
   manual: True

executable java2scala
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base,
                   directory,
                   uu-parsinglib,
                   uulib,
                   java2scala,
                   filepath,
                   Cabal >= 1.8,
                   pipes-old >=3.2.0 && <3.4,
                   pipes-safe-old == 1.2.0,
                   bytestring,
                   unix,
                   system-filepath,
                   uuagc,
                   uuagc-cabal,
                   MissingH
  other-modules:
    AG.Syntax AG.J2SAttrSem

executable test
  main-is:       Main.hs
  hs-source-dirs: test
  build-depends:   base,
                   directory,
                   uu-parsinglib,
                   uulib,
                   java2scala,
                   filepath,
                   Cabal >= 1.8,
                   pipes-old >=3.2.0 && <3.4,
                   pipes-safe-old == 1.2.0,
                   bytestring,
                   unix,
                   system-filepath,
                   uuagc,
                   uuagc-cabal,
                   MissingH

library
  build-depends:
                   base,
                   directory,
                   uu-parsinglib,
                   uulib,
                   filepath,
                   Cabal >= 1.8,
                   pipes-old >=3.2.0 && <3.4,
                   pipes-safe-old == 1.2.0,
                   bytestring,
                   unix,
                   system-filepath,
                   uuagc,
                   uuagc-cabal,
                   MissingH
  hs-source-dirs: src, test
  exposed-modules: J2s.Scanner J2s.Parser J2s.Integration
        J2s.Scanner.Token J2s.Scanner.Show J2s.Scanner.Lexical J2s.Scanner.Generic
        J2s.Scanner.Position J2s.Integration.ScannerParser J2s.Ast.Syntax J2s.Ast.Semantic
        AG.Syntax AG.J2SAttrSem
  extensions: TypeSynonymInstances, MultiParamTypeClasses

  ghc-options:  -fno-warn-missing-signatures
